--- a/BTSpringMyBatis/src/main/webapp/resources/css/styles.css
+++ b/BTSpringMyBatis/src/main/webapp/resources/css/styles.css
@@ -27,7 +27,10 @@ body {
 	width: 400px;
 	margin: auto;
 }
-
+#formsearch {
+	width: 400px;
+	margin: auto;
+}
 #footer {
 	margin-top: 10px;
 	text-align: center;
@@ -114,7 +117,7 @@ background: #fff;
 }
 #pagination-flickr li{
 border:0; margin:0; padding:0;
-font-size:11px;
+font-size: 20px;
 list-style:none;
 }
 
